Fix spacing above footer in bio page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,9 +14,14 @@ html {
 }
 
 body {
+  background-color: white;
   display: flex;
   flex-direction: column;
   margin: 0 0 18px;
+}
+
+#main {
+  background-color: white;
 }
 
 h3 {
