--- a/src/styles/MagnetPodcast.css
+++ b/src/styles/MagnetPodcast.css
@@ -1,11 +1,12 @@
 .magnet-podcast {
   text-align: center;
+  margin-top: 70px;
 }
 
 @media screen and (min-width: 601px) {
   .podcast-wrapper {
     max-width: 80%;
-    margin: auto;
+    margin: 20px auto;
   }
 }
 
