--- a/src/styles/Videos.css
+++ b/src/styles/Videos.css
@@ -57,6 +57,6 @@
 
 @media screen and (max-width: 600px) {
   .videos-container {
-    width: 90%;
+    width: 95%;
   }
 }
